# multiViewLearning

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
configs/: mvl_baseline.yaml
notebooks/: soloRGB.ipynb  twoViews_classifier.ipynb
src/multiViewLearning/: __init__.py  cli.py  datasets.py  metrics.py  models.py  train.py
tests/: test_datasets.py  test_models.py  test_train.py
