[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "multiViewLearning"
version = "0.1.0"
description = "Multi-view learning models, datasets, and training utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
keywords = ["multi-view", "deep-learning", "pytorch"]
dependencies = []

[project.scripts]
mvl = "multiViewLearning.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multiViewLearning"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E203", "E266", "E501", "W503"]

